# CS116_project

./: .gitignore  Data exam.ipynb  README.md  predict.py  predict_twostage.py  pyproject.toml  requirements.txt  run_pipeline.sh  train.py  train_twostage.py  tune.py
outputs/: best_params.json  tune.db
outputs/checkpoints/: lgbm_ranker.pkl
pipeline/: stage1_candidates.py  stage2_reranking.py
src/: config.py
src/candidates/: covisitation.py  history.py  word2vec_cands.py
src/data/: loader.py
src/evaluation/: ensemble.py  metrics.py
src/features/: builder.py  cross_features.py  item_features.py  user_features.py
src/models/: als_model.py  base.py  popularity.py
src/ranker/: lgbm_ranker.py
