[project]
name = "recommendation-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core data processing
    "polars>=0.20",
    "numpy>=1.26",
    "scipy>=1.12",
    # Single-stage baseline – Collaborative Filtering
    "implicit>=0.7",
    # Two-stage – Word2Vec embeddings
    "gensim>=4.3",
    # Two-stage – LightGBM reranker
    "lightgbm>=4.0",
    # Feature engineering
    "scikit-learn>=1.4",
    # Hyperparameter tuning
    "optuna>=3.5",
]

[tool.uv]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
